<resources>
    <string name="app_name">UI Design</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="new_user_register_now">New User</string>
    <string name="top_icon">Top icon</string>
    <string name="phone_number">Phone number</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign up</string>
</resources>
